--- a/jufek-trendy/composer.json
+++ b/jufek-trendy/composer.json
@@ -27,6 +27,9 @@
         "phpunit/phpunit": "^9.3.3"
     },
     "config": {
+        "platform": {
+            "php": "7.4.8"
+        },
         "optimize-autoloader": true,
         "preferred-install": "dist",
         "sort-packages": true
